--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=""
+    <link rel="stylesheet" href="https://david-um.github.io/Profile/csstyle/normalize.css">
+    <link rel="stylesheet" href="https://david-um.github.io/Profile/csstyle/styles.css">
     <title>Profile</title>
 </head>
 <body>
