Mejorando los estilos

--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         </div>
         <h1 class="TituloNombre">David Urbano</h1>
         <h3 class="version" id="version"></h3>
-        
-        
     </header>
     <main>
+        <div class="cajas">
 
+        </div>
+        <div class="cajas">
+
+        </div>
+        <div class="cajas">
+
+        </div>
     </main>
     <footer>
 
