Añadiendo pie de pagina

--- a/index.html
+++ b/index.html
@@ -13,26 +13,31 @@
 </head>
 <body>
     <header>
-        <div>
+      <!--   <div>
             <a href="https://github.com/David-UM" target="_blank"><img class ="iconosEnlaces" src="./assets/github.svg"></a>
             <a href="https://twitter.com/David_urbano_" target="_blank"><img class ="iconosEnlaces" src="./assets/twitter.svg"></a>
-        </div>
+        </div> -->
         <h1 class="TituloNombre">David Urbano</h1>
         <h3 class="version" id="version"></h3>
     </header>
     <main>
-        <div class="cajas">
 
-        </div>
-        <div class="cajas">
-
-        </div>
-        <div class="cajas">
-
-        </div>
     </main>
     <footer>
-
+        <img src="./assets/hedgehog.svg" alt="" class="footer-image">
+        <div class="social-icons-container">
+                <a href="https://twitter.com/David_urbano_" class="social-icon" target="_blank"></a>
+                <a href="https://github.com/David-UM" class="social-icon" target="_blank"></a>
+                <a href="https://www.linkedin.com/in/david-urbano-82a151223/" class="social-icon" target="_blank"></a>
+                <a href="" class="social-icon" target="_blank"></a>
+                <a href="" class="social-icon" target="_blank"></a>
+        </div>
+        <ul class="footer-menu-container">
+            <li class="menu-item">Legal</li>
+            <li class="menu-item">Cookies</li>
+            <li class="menu-item">Privacy</li>
+        </ul>
+        <span class="copyright">&copy;2022,David. Todos los derechos reservados</span>
     </footer>
     <script src="./Scripts/Version.js"></script>
 </body>
