aun jugando con el sitio web

--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
         
     </header>
     <main>
-        <div class="contenedor-uno">
+        <div class="contenedor-description">
+            <div class='contenedor-description-imagen'>
+
+            </div>
+            <div class="contenedor-description-texto">
+
+            </div>
+        </div>
+        <div class="banner-proyectos">
+            <p class="banner-texto">Mis Proyectos</p>
+        </div>
+        <div class="contenedor-menu">
             <div class="principal principal-uno">
-                <p class="principal-uno-texto">Proyectos personales</p>
-                <a href="#"><p class="principal-uno-boton">Entrar</p></a>
-                <img class="principal-uno-imagen" src="/assets/Duo.jpg">
+                <p class="principal-uno-texto">DuoX</p>
+                <a href="https://david-um.github.io/InglesDuo/" target="_blank"><p class="principal-uno-boton">Entrar</p></a>
+                <img class="principal-uno-imagen" src="https://david-um.github.io/Profile/assets/Duo.jpg">
             </div>
             <div class="principal principal-dos">
                 
